--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "localforage": "^1.10.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
